--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/LambdaSchool/Node-Blog#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "knex": "^0.16.3",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "knex-cleaner": "^1.1.4",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.19.0"
   }
 }
